# query-analysis-sib-swiss-federated-query

./: .gitmodules  README.md  bun.lockb  generateSurvey.ts  index.ts  package.json  util.ts
extra/: SIB_survey_Curated.csv  queries.json
lib/: generateSurvey.ts  queryAnalysis.ts  resultTable.ts
python/: README.md  all_results_table.py  pyproject.toml
results/: relevance.tex  result.tex  stat.json  summary.tex  summary_bucket.tex  survey.csv
template/: real_world_relevance.tex  summary_bucket.tex  summary_template.tex
