[project]
name = "analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Bryan-Elliott Tam",email = "bryanelliott.tam@ugent.be"}
]
requires-python = ">=3.13"
dependencies = [
    "latextable (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
